--- a/index1.html
+++ b/index1.html
@@ -10,19 +10,89 @@
 </head> 
 
 <body>
+    <!--start one page-->
     <div class="page1">
       <div class="navbar">
+        <div class="countainer" >
+        <h2>loay issa</h2>
+
           <ul>
-          <li>hom</li>
-          <li>information</li>
-          <li>contact me</li>
+          <li id="hom" >hom</li>
+          <li id="information">information</li>
+          <li id="contact">contact me</li>
 
           </ul>
+        </div>
       </div>
+      <div hidden class="slaider">
+          <div class="active">
+           <h2>Camry</h2>
+           <p>First offer 10% discount for the first 5 customers</p>
+          </div>
+          <div>
+            <h2>Camry</h2>
+            <p>First offer 10% discount for the first 5 customers</p>
+          </div>
+          <div>
+            <h2>Camry</h2>
+            <p>First offer 10% discount for the first 5 customers</p>
+          </div>
+          <div>
+            <h2>Camry</h2>
+            <p>First offer 10% discount for the first 5 customers</p>
+          </div>
 
-
-
+      </div>
     </div>
+        <!--end one page-->
+   <!--start tow page-->
+<div class="slider2">
+    <h1>Lorem, ipsum.</h1>
+    <p>Lorem, ipsum dolor.</p>
+
+</div>
+<div class="cardCar">
+<div class="ch1">
+ <img src="./imag/51859.jpg">
+ <p>Lorem ipsum dolor sit amet.</p>
+
+</div>
+<div class="ch2">
+
+    <img src="./imag/51859.jpg">
+ <p>Lorem ipsum dolor sit amet.</p>
+
+</div>
+<div class="ch3">
+
+    <img src="./imag/51859.jpg">
+ <p>Lorem ipsum dolor sit amet.</p>
+
+</div>
+<div class="ch4">
+
+    <img src="./imag/51859.jpg">
+ <p>Lorem ipsum dolor sit amet.</p>
+</div>
+<div class="ch5">
+    <img src="./imag/51859.jpg">
+ <p>Lorem ipsum dolor sit amet.</p>
+</div>
+<div class="ch6">
+    <img src="./imag/51859.jpg">
+ <p>Lorem ipsum dolor sit amet.</p>
+</div>
+
+</div>
+
+
+
+
+
+   <!--end tow page-->
+
+
+
 
  <script src="./page.js"></script>
  </body>   
