add card in jq and hait or show

--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="./staylepage.css"/>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
 
 </head> 
 
@@ -24,7 +26,7 @@
           </ul>
         </div>
       </div>
-      <div hidden class="slaider">
+      <div  class="slaider">
           <div class="active">
            <h2>Camry</h2>
            <p>First offer 10% discount for the first 5 customers</p>
@@ -46,42 +48,10 @@
     </div>
         <!--end one page-->
    <!--start tow page-->
-<div class="slider2">
-    <h1>Lorem, ipsum.</h1>
-    <p>Lorem, ipsum dolor.</p>
+   <div class="ooo" >Lorem ipsum dolor sit.</div>
+   <div class="page2">
 
-</div>
-<div class="cardCar">
-<div class="ch1">
- <img src="./imag/51859.jpg">
- <p>Lorem ipsum dolor sit amet.</p>
-
-</div>
-<div class="ch2">
-
-    <img src="./imag/51859.jpg">
- <p>Lorem ipsum dolor sit amet.</p>
-
-</div>
-<div class="ch3">
-
-    <img src="./imag/51859.jpg">
- <p>Lorem ipsum dolor sit amet.</p>
-
-</div>
-<div class="ch4">
-
-    <img src="./imag/51859.jpg">
- <p>Lorem ipsum dolor sit amet.</p>
-</div>
-<div class="ch5">
-    <img src="./imag/51859.jpg">
- <p>Lorem ipsum dolor sit amet.</p>
-</div>
-<div class="ch6">
-    <img src="./imag/51859.jpg">
- <p>Lorem ipsum dolor sit amet.</p>
-</div>
+   
 
 </div>
 
