add new function filter car in card

--- a/index1.html
+++ b/index1.html
@@ -48,17 +48,18 @@
     </div>
         <!--end one page-->
    <!--start tow page-->
-   <div class="ooo" >Lorem ipsum dolor sit.</div>
+   <div class="ooo" >
+   
+    <p>Lorem ipsum dolor sit.</p>
+  </div>
+
    <div class="page2">
 
-   
-
+    
 </div>
 
 
-
-
-
+ 
    <!--end tow page-->
 
 
