add slider in html and add function show slider

--- a/index1.html
+++ b/index1.html
@@ -31,20 +31,21 @@
            <p>First offer 10% discount for the first 5 customers</p>
           </div>
           <div>
-            <h2>Camry</h2>
+            <h2>Camry1</h2>
             <p>First offer 10% discount for the first 5 customers</p>
           </div>
           <div>
-            <h2>Camry</h2>
+            <h2>Camry2</h2>
             <p>First offer 10% discount for the first 5 customers</p>
           </div>
           <div>
-            <h2>Camry</h2>
+            <h2>Camry3</h2>
             <p>First offer 10% discount for the first 5 customers</p>
           </div>
 
       </div>
     </div>
+    
         <!--end one page-->
    <!--start tow page-->
    <div class="ooo" >
