add if statmen return all car

--- a/index1.html
+++ b/index1.html
@@ -28,20 +28,17 @@
       <div class=" imaSla">
       <div  class="slaider">
           <div class="active">
-           <h2>Camry</h2>
+           <h2>Mercedes</h2>
            <p>First offer 10% discount for the first 5 customers</p>
           </div>
           <div>
-            <h2>Camry1</h2>
-            <p>First offer 10% discount for the first 5 customers</p>
+            <p>Available in installments with a first payment 5000 Jd <br> Monthly premium 200 jd </p>
+
           </div>
+          
           <div>
-            <h2>Camry2</h2>
-            <p>First offer 10% discount for the first 5 customers</p>
-          </div>
-          <div>
-            <h2>Camry3</h2>
-            <p>First offer 10% discount for the first 5 customers</p>
+            <h2>BMW X6 </h2>
+            <p>First offer 5% discount for the first 5 customers</p>
           </div>
 
       </div>
@@ -63,7 +60,7 @@
 
         <div class="select">
           <select id="car" >
-          <option  value="all">all</option>  
+          <option  id="all" value="all">all</option>  
           <option id="car1" value="car1" >car1</option>
           <option id="car2" value="car2" >car2</option>
          
