Describe the changes

--- a/index1.html
+++ b/index1.html
@@ -49,6 +49,20 @@
       </div>
 
       <div class="buton">
+
+        <div class="slider-outer">
+          <img src="./imag/arrow-left.png" class="prev">
+
+          <div class="slider-inner">
+              <img src="./imag/bmw.jpg" class="active" >
+              <img src="./imag/bmw1.jpg" >
+              <img src="./imag/marcides S-Class.jpg" >
+              
+          </div>
+          <img src="./imag/arrow-right.png" class="next" id="imag">
+
+          
+      </div>
         <button id="carShow">car show</button>
       </div>
 
