add method location.reload

--- a/index1.html
+++ b/index1.html
@@ -54,9 +54,10 @@
           <img src="./imag/arrow-left.png" class="prev">
 
           <div class="slider-inner">
-              <img src="./imag/bmw.jpg" class="active" >
-              <img src="./imag/bmw1.jpg" >
-              <img src="./imag/marcides S-Class.jpg" >
+              <img src="./imag/hyundai.jpg" class="active" >
+              <img src="./imag/1.jpg" >
+              <img src="./imag/2.jpg" >
+              <img src="./imag/sontafromback.jpg">
               
           </div>
           <img src="./imag/arrow-right.png" class="next" id="imag">
