modification in css some color

--- a/index1.html
+++ b/index1.html
@@ -16,7 +16,8 @@
     <div class="page1">
       <div class="navbar">
         <div class="countainer" >
-        <h2>loay issa</h2>
+        <h2>Car <span>showroom</span> </h2>
+        
           <ul>
           <li id="home" >home</li>
           <li id="contact">contact me</li>
@@ -29,16 +30,16 @@
       <div  class="slaider">
           <div class="active">
            <h2>Mercedes</h2>
-           <p>First offer 10% discount for the first 5 customers</p>
+           <p>First <span> offer 10% discount </span> for the first 5 customers</p>
           </div>
           <div>
-            <p>Available in installments with a first payment 5000 Jd <br> Monthly premium 200 jd </p>
+            <p>Available in installments with a <span> first payment 5000 Jd </span> <br> Monthly premium 200 jd </p>
 
           </div>
           
           <div>
             <h2>BMW X6 </h2>
-            <p>First offer 5% discount for the first 5 customers</p>
+            <p>First offer <span> 5% discount </span>  for the first 5 customers</p>
           </div>
 
       </div>
