chainge image in home

--- a/index1.html
+++ b/index1.html
@@ -45,7 +45,7 @@
       </div>
        
       <div class="imag">
-        <img src="./imag/Korean-car-brands.jpg" alt="">
+        <img src="./imag/German-car-brands.jpg" alt="">
         </div>
       </div>
 
